@@ -1,4 +1,4 @@
-.\" $Id: tiffcp.1,v 1.9 2007-02-24 11:19:33 dron Exp $
+.\" $Id: tiffcp.1,v 1.9.2.1 2010-06-04 16:51:14 fwarmerdam Exp $
 .\"
 .\" Copyright (c) 1988-1997 Sam Leffler
 .\" Copyright (c) 1991-1997 Silicon Graphics, Inc.
@@ -209,6 +209,9 @@ appear in a tile.
 .I tiffcp
 attempts to set the tile dimensions so that no more than 8 kilobytes of data
 appear in a tile.
+.TP
+.B \-x
+Force the output file to be written with PAGENUMBER value in sequence.
 .TP
 .BI \-,= character
 substitute
